correcting position mobile

--- a/cv.css
+++ b/cv.css
@@ -16,10 +16,6 @@ body{
         background-attachment: fixed;
         
     }
-
-.cv-content{
-    width: 100%;
-}
 nav{
     display: flex;
     align-items: center;
@@ -79,7 +75,8 @@ nav ul li a:hover::after{
     border: 2px solid #fff;
     box-shadow: 2px 2px 6px #9b0000;
 }
-.cv-items{
+.cv-content{
+    width: 100%;
     display: inline-block;
     position: relative;
     max-width: 1440px;
@@ -91,7 +88,7 @@ nav ul li a:hover::after{
     font-size: 20px;
     text-align: center;
     margin-top: 80px;
-    margin-left: 140px;
+    margin-left: 120px;
     
 }
 .link-school{
@@ -456,14 +453,17 @@ footer:active{
         font-size: 10px;
         margin-left: 6px;
     }
-    .cv-items{
-        max-width: 320px;
+    .cv-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .current-wish h2{
         font-size: 100%;
         text-align: center;
         margin-top: 40px;
-        margin-left:40px;
+        margin-left:0px;
         
     }
     .link-school{
@@ -480,7 +480,7 @@ footer:active{
         padding: 6px;
     }
     .cv-introduction{
-        left: 30px;
+        left: 0px;
         top: 40px;
         width: 300px;
     }
@@ -494,7 +494,7 @@ footer:active{
     }
     .cv-itself{
         width: 300px;
-        left: 30px;
+        left: 0px;
         top: 100px;
         margin-bottom: 80px;
     }
@@ -568,7 +568,7 @@ footer:active{
     }
     .school-content{
         width: 300px;
-        left: 10px;
+        left: 0px;
     }
     .school-content .school-title{
         margin-top: 125px;
